i18n/es/docusaurus-plugin-content-docs-ap/version-2.8/admin-guide/sep6/configuration.mdx
---
title: Configuración
sidebar_position: 20
---

import { CodeExample } from "@site/src/components/CodeExample";

# Configuración

Para habilitar depósitos y retiradas SEP-6, la Anchor Platform debe configurarse para hacer lo siguiente:

- Proporcionar las URL de servicio necesarias para los puntos finales SEP-6, 12 y 38 en el archivo `stellar.toml`
- Proporcionar información sobre los activos on-chain y off-chain, así como sobre las vías de pago, admitidas por tu negocio a través de los puntos finales `/info` de SEP-6 y SEP-38
- Admitir los puntos finales y los callbacks requeridos para solicitar información KYC y proporcionar tasas de cambio

## Habilitar Depósitos y Retiros Programáticos

Agrega las siguientes variables a tu archivo de entorno.

<CodeExample>

```bash
# dev.env
SEP6_ENABLED=true
SEP12_ENABLED=true
SEP38_ENABLED=true
```

</CodeExample>

### Modificar un Archivo de Información de Stellar

Modifiquemos el archivo `stellar.toml` creado [anteriormente][sep1-ap]. Las billeteras necesitan saber que la funcionalidad SEP-6 es admitida por tu negocio, y también necesitan conocer todos los activos Stellar que admites.

<CodeExample>

```toml
# dev.stellar.toml
ACCOUNTS = ["add your public keys for your distribution accounts here"]
SIGNING_KEY = "add your signing key here"
NETWORK_PASSPHRASE = "Test SDF Network ; September 2015"

TRANSFER_SERVER = "http://localhost:8080/sep6"
WEB_AUTH_ENDPOINT = "http://localhost:8080/auth"
KYC_SERVER = "http://localhost:8080/sep12"
ANCHOR_QUOTE_SERVER = "http://localhost:8080/sep38"

# Add support for USDC
[[CURRENCIES]]
code = "USDC"
issuer = "GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
status = "test"
is_asset_anchored = false
desc = "USD Coin issued by Circle"

[DOCUMENTATION]
ORG_NAME = "Your organization"
ORG_URL = "Your website"
ORG_DESCRIPTION = "A description of your organization"
```

</CodeExample>

Ten en cuenta que necesitarás crear otro archivo para tu implementación en producción que use la frase de la red pública, las URL de servicio en producción, tus cuentas de distribución Mainnet y la clave de firma, así como las cuentas emisoras Mainnet de los activos que utiliza tu servicio.

### Modificar el Archivo de Configuración de Activos

Ahora estás listo para especificar lo siguiente en tu archivo `dev.assets.yaml`, y cambiar los valores según tu caso de uso. Este archivo de activos de ejemplo habilita el soporte para USDC de Circle y un fiat USD para depositar y retirar.

Los métodos especificados en las secciones `sep38` son métodos que serán expuestos por el punto final SEP-38 [`GET /info`][sep38].

Los métodos especificados en las secciones `deposit` y `withdraw` son los métodos que serán expuestos por el punto final SEP-6 [`GET /info`][sep-6]. Los métodos listados deben coincidir con los métodos definidos en la sección SEP-38 del archivo.

También ten en cuenta que los activos fiat, aquellos con `schema: iso4217`, no necesitan que se especifiquen los objetos de configuración `sep6_enabled`, `deposit` o `withdraw`. De la misma manera, los activos Stellar, aquellos con `schema: stellar`, no necesitan que se especifiquen los objetos de configuración `sep38.sell_delivery_methods` o `sep38.buy_delivery_methods`.

<CodeExample>

```yaml
assets:
  - schema: stellar
    code: USDC
    issuer: GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 2
    sep6_enabled: true
    sep38_enabled: true
    sep38:
      exchangeable_assets:
        - iso4217:USD
    deposit:
      enabled: true
      methods:
        - ACH
    withdraw:
      enabled: true
      methods:
        - ACH
  - schema: iso4217
    code: USD
    significant_decimals: 2
    sep38_enabled: true
    sep38:
      exchangeable_assets:
        - stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
      buy_delivery_methods:
        - name: ACH
          description: ACH debits for US bank accounts
      sell_delivery_methods:
        - name: ACH
          description: ACH credit for US bank accounts
```

</CodeExample>

### Gestionar Cuentas de Distribución

Ten en cuenta que el ejemplo anterior lista un atributo `distribution_account` para la entrada USDC. Si se especifica, esta cuenta se proporcionará junto con un memo único y generado aleatoriamente por transacción a los clientes como la dirección a la que enviar fondos para transacciones de retirada de fondos. El memo de la transacción es cómo tú o la Anchor Platform igualarán los fondos recibidos con un registro de transacción en la base de datos de la Anchor Platform.

Si no tienes tu propia cuenta Stellar y en su lugar usas un tercero que te proporciona una cuenta Stellar y memo para que puedan recibir fondos en tu nombre, como un exchange o custodio, debes omitir el campo `distribution_account` de tu archivo de configuración de activos. En su lugar, necesitarás proporcionar la cuenta Stellar y el memo que te gustaría usar para recibir fondos a través de una solicitud a la Anchor Platform [`request_onchain_funds`][request-onchain-funds] de forma individual para cada transacción.

Para configurar la Anchor Platform para esperar que la cuenta Stellar y el memo sean proporcionados a través de la API en lugar de configurarlos a través del archivo de activos, especifica la siguiente variable de entorno.

<CodeExample>

```bash
# dev.env
SEP6_DEPOSIT_INFO_GENERATOR_TYPE=none
```

</CodeExample>

Si utilizas un proveedor de billeteras admitido por el servicio de custodia de la Anchor Platform, como Fireblocks, también puedes configurar la Anchor Platform para conectarse directamente a tu proveedor de billeteras para obtener tus cuentas de distribución y memos. Si esto está configurado, la Anchor Platform también utilizará el proveedor de billeteras para enviar fondos a los clientes. Consulta la sección [servicios de custodia] para más información sobre la configuración de esta función, pero primero necesitarás especificar un valor diferente para la variable de entorno mencionada anteriormente.

<CodeExample>

```bash
# dev.env
SEP6_DEPOSIT_INFO_GENERATOR_TYPE=custody
```

</CodeExample>

### Habilitar Callbacks al Servidor del Negocio

Las empresas necesitan recolectar y validar información KYC sobre los clientes para quienes facilitan transacciones. Los clientes preguntan a tu negocio qué información KYC necesita ser recolectada y envían esa información a través de la API KYC SEP-12 alojada por la Anchor Platform, pero la Anchor Platform nunca almacena información que pueda identificar personalmente (PII). En su lugar, reenvía solicitudes de los clientes al servidor del negocio y devuelve las respuestas del negocio de nuevo al cliente, actuando como un servidor proxy.

Además, las empresas necesitan proporcionar a los clientes una API [Rates][get-rates-api] para consultar las tasas de cambio que están ofreciendo entre los activos on-chain y off-chain admitidos por el negocio. Si la tasa es competitiva, los clientes también necesitan poder solicitar un compromiso con la tasa actualmente ofrecida por el negocio durante un breve periodo de tiempo. De manera similar a la API KYC, la Anchor Platform realiza solicitudes a tu servidor de negocio para obtener tasas de cambio y cotizaciones y las devuelve a los clientes.

Para habilitar estas solicitudes a tu servidor de negocio, primero necesitarás agregar tu servidor de negocio al archivo docker compose. Luego, para admitir solicitudes a tu servidor de negocio desde la Anchor Platform, necesitas habilitar callbacks.

<CodeExample>

```bash
# dev.env
CALLBACK_API_BASE_URL=http://business-server:3000/callbacks
CALLBACK_API_AUTH_TYPE=jwt
CALLBACK_API_AUTH_JWT_EXPIRATION_MILLISECONDS=30000
CALLBACK_API_AUTH_JWT_HTTP_HEADER=Authorization
SECRET_CALLBACK_API_AUTH_SECRET="a secret used to sign JWTs"
```

</CodeExample>

Lo anterior indica a la Anchor Platform que incluya un [JWT][how-to-use-jwt], firmado con el secreto configurado, en el encabezado `Authorization` de las solicitudes realizadas a `/callbacks/<callback endpoint>` para que tu servidor pueda autenticar la Anchor Platform antes de procesar las solicitudes.

`more_info_url` es una URL opcional proporcionada por tu servidor de negocio para que las aplicaciones de billetera muestren información sobre transacciones previamente iniciadas. Esta URL se utiliza típicamente por las billeteras en sus vistas de historial de transacciones, y tu negocio puede especificar la información que se mostrará sobre la transacción.

<CodeExample>

```bash
# dev.env
SEP6_MORE_INFO_URL_BASE_URL=http://example.com
SECRET_SEP6_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"
```

</CodeExample>

Consulta la [API KYC][platform-api-kyc] y la [Rates API][sep38] para obtener detalles sobre los puntos finales que deben implementarse en tu servidor de negocio.

## Probar Con la Billetera de Demostración

¡Las billeteras ahora deberían ser capaces de descubrir, autenticar e iniciar transacciones con tu servicio! Tu proyecto y archivos fuente ahora deberían verse algo así.

<CodeExample>

```
├── dev.env
├── docker-compose.yaml
├── config
│   ├── dev.assets.yaml
│   ├── dev.stellar.toml
```

</CodeExample>

Tu entorno ahora debería verse algo parecido a lo siguiente.

<CodeExample>

```bash
# dev.env
ASSETS_TYPE=file
ASSETS_VALUE=/home/dev.assets.yaml

SEP1_ENABLED=true
SEP1_TOML_TYPE=file
SEP1_TOML_VALUE=/home/dev.stellar.toml

SEP6_ENABLED=true
SEP6_DEPOSIT_INFO_GENERATOR_TYPE=none
SEP6_MORE_INFO_URL_BASE_URL=http://example.com
SECRET_SEP6_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"

SEP10_ENABLED=true
SEP10_HOME_DOMAIN=localhost:8080
SECRET_SEP10_SIGNING_SEED="a Stellar private key"
SECRET_SEP10_JWT_SECRET="a secret used to sign JWTs"

SEP12_ENABLED=true

SEP38_ENABLED=true

CALLBACK_API_BASE_URL=http://business-server:3000/callbacks
CALLBACK_API_AUTH_TYPE=jwt
CALLBACK_API_AUTH_JWT_EXPIRATION_MILLISECONDS=30000
CALLBACK_API_AUTH_JWT_HTTP_HEADER=Authorization
SECRET_CALLBACK_API_AUTH_SECRET="a secret used to sign JWTs"
```

</CodeExample>

Para probar esto, ve a la [Billetera de Demostración Stellar][stellar-demo-wallet].

Inicia una transacción de depósito haciendo lo siguiente:

- Crear un nuevo keypair
- Haz clic en el botón "Agregar Activo" e introduce
  - el código del activo Stellar en tu archivo `stellar.toml`
  - tu dominio principal, `localhost:8080`
- Selecciona el desplegable y haz clic en "Deposito SEP-6", luego haz clic en "Iniciar"

La billetera de demostración debería poder encontrar tu archivo `stellar.toml`, autenticar usando el keypair Stellar que acabas de crear, e iniciar una transacción.

[sep-6]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0006.md
[sep1-ap]: ../sep1/README.mdx
[stellar-demo-wallet]: https://demo-wallet.stellar.org/
[get-rates-api]: ../../api-reference/callbacks/get-rates.api.mdx
[sep38]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0038.md
[platform-api-kyc]: ../../api-reference/callbacks/get-customer.api.mdx
[request-onchain-funds]: ../../api-reference/platform/rpc/methods/request_onchain_funds.mdx
[how-to-use-jwt]: ../sep24/faq.mdx
